# polybend

./: .gitignore  CMakeLists.txt  ConstraintData.hxx  DisplayWidget.cpp  DisplayWidget.cxx  DisplayWidget.h  DisplayWidget.hxx  MainWindow.cpp  MainWindow.cxx  MainWindow.h  MainWindow.hxx  MainWindow.ui  PrimitiveData.h  PrimitiveData.hxx  README.md  TODO  main.cpp  main.cxx
include/: ConstraintData.hpp  DisplayWidget.hpp  DisplayWidget.hpp.orig  GLData.hpp  MainWindow.hpp  ObjectManager.hpp  ObjectManager.hpp.orig  PolygonData.hpp  PrimitiveData.hpp  PrimitiveData.hpp.orig  StringMap.hpp  Triangulator.hpp  Vertex.hpp  rbtree.hpp  rbtree.hpp.orig  xorwow.hpp.orig
src/: DisplayWidget.cpp  DisplayWidget.cpp.orig  MainWindow.cpp  ObjectManager.cpp  Shaders.qrc  Triangulator.cpp  main.cpp
src/glsl/: default.f.glsl  default.v.glsl
ui/: MainWindow.ui
